<?xml version="1.0"?>
<package>

    <name>youbot_arm_joy</name>

    <version>0.0.0</version>

    <description>The youbot_arm_joy package</description>

    <maintainer email="todo@todo.todo">TODO</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <build_depend>sensor_msgs</build_depend>
    <run_depend>sensor_msgs</run_depend>

    <build_depend>brics_actuator</build_depend>
    <run_depend>brics_actuator</run_depend>

    <export></export>

</package>